# sign-language-translator

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  publish.yml
configs/: base.yaml
configs/data/: asl_citizen.yaml  msasl.yaml  wlasl.yaml
configs/features/: mediapipe_holistic.yaml
configs/model/: sign_transformer.yaml
configs/serve/: local.yaml  production.yaml
configs/train/: default.yaml
data/vocab/: vocab.json
docker/: client.Dockerfile  serve.Dockerfile  train.Dockerfile
docs/: README.md  api_reference.md  data_schema.md  deployment.md  model_card.md  operations.md
docs/adr/: 0001-mediapipe-holistic.md  0002-temporal-architecture.md  0003-decoding-strategy.md  0004-deployment-target.md  0005-data-versioning.md  0006-browser-edge-onnx.md  0007-jwt-auth.md  0008-config-hydra.md  0009-training-environment.md
hf_space/: README.md  app.py  requirements.txt
hf_space/web/: README.md
monitoring/: alerts.yaml  drift_detection.py
requirements/: base.txt  dev.txt  serve.txt  train.txt
scripts/: build_vocab.py  download_datasets.py  evaluate.py  export_onnx.py  export_torchscript.py  extract_landmarks.py  preprocess_videos.py  run_mlflow_server.sh  train.py
src/signlang/: config.py
src/signlang/data/: datamodules.py
src/signlang/evaluation/: metrics.py  reports.py
src/signlang/inference/: postprocess.py  predictor.py
src/signlang/models/: losses.py  sign_model.py
src/signlang/serving/: app.py  middleware.py  model_registry.py  observability.py  security.py
src/signlang/tracking/: mlflow_utils.py
src/signlang/training/: optimizers.py  schedulers.py  trainer.py
src/signlang/utils/: io.py  logging.py  seeding.py  timing.py
src/signlang/web/: index.html
tests/: conftest.py
tests/e2e/: test_browser_to_endpoint.py
tests/fixtures/: wlasl_annotations_min.json
tests/integration/data/: test_build_vocab.py  test_downloaders.py  test_extract_landmarks.py
tests/integration/serving/: test_api.py
tests/integration/training/: test_datamodule.py
tests/unit/api/: test_api_shape.py  (+1 more)
(+27 files in other folders)
