[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signlang"
version = "0.1.0"
description = "Real-time ASL isolated-sign recognizer (Transformer + CTC, browser/server inference)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ML Platform" }]
dependencies = [
    "numpy~=1.26",
    "opencv-python~=4.9",
    "mediapipe~=0.10",
    "pyyaml~=6.0",
    "pydantic~=2.6",
    "structlog~=24.1",
    "onnxruntime~=1.17",
]

[project.optional-dependencies]
train = [
    "torch~=2.2",
    "pytorch-lightning~=2.2",
    "torchmetrics~=1.3",
    "mlflow~=2.12",
    "dvc~=3.48",
    "hydra-core~=1.3",
    "omegaconf~=2.3",
    "kaggle~=1.6",
]
serve = [
    "fastapi~=0.110",
    "uvicorn[standard]~=0.27",
    "prometheus-client~=0.20",
    "opentelemetry-api~=1.24",
    "opentelemetry-sdk~=1.24",
    "opentelemetry-instrumentation-fastapi~=0.45b0",
    "pyjwt~=2.8",
]
dev = [
    "pytest~=8.0",
    "pytest-asyncio~=0.23",
    "pytest-cov~=4.1",
    "httpx~=0.26",
    "ruff~=0.4",
    "mypy~=1.9",
    "pre-commit~=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = [
    "E501",
    "B008",
    "B017",
    "B904",
    "B905",
    "N806",
    "N812",
    "E741",
    "RUF012",
    "RUF059",
    "SIM108",
    "SIM105",
    "UP035",
    "UP045",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]
"scripts/**" = ["T201"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = false
exclude = ["build/", "dist/", "tests/e2e/"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
    "e2e: marks end-to-end tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/signlang"]
omit = ["*/tests/*", "*/scripts/*"]
